@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.revision3"
        name="Revision3"
-       version="2.0.13" 
+       version="2.0.14" 
        provider-name="stacked">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
