@@ -28,6 +28,10 @@
 	<string id="30027">Networks</string>
 	<string id="30028">Whether you're a gamer, tech enthusiast, or just like to know what's hot right now you can't miss Revision3's newest networks! Tune in for all the best content plus bonus clips you won't see anywhere else.</string>
 	<string id="30029">Please update your Revision3 favorites.</string>
+	<string id="30030">Play All</string>
+	<string id="30031">Play all episodes on the current page.</string>
+	<string id="30032">Enable Play All option</string>
+	<string id="30033">Enable Daily/Extra Shows</string>
 	<string id="30050">There was a connection error:</string>
 	<string id="30051">If this problem persists, please submit the error report.</string>
 	<string id="30052">Retry</string>
