@@ -1,4 +1,14 @@
-[B]Version 2.0.13[/B]
+[B]Version 2.0.14[/B]
+
+- Added option to hide Daily/Extra shows (Enabled by default)
+- Added "Play All" option to play all episodes on the current page
+- Added progress bar when loading directories
+- Switch to Revision3 API for media urls
+- Fixed UnicodeEncodeError when loading Networks subdirectories
+- Fixed ValueError error when loading addon
+- Fixed Https/SSL errors
+
+[B]Version 3.0.13[/B]
 
 - Updated addon to support recent Revision3 changes
 - Switch to Revision3 v0.1 API
